--- a/css/styles.css
+++ b/css/styles.css
@@ -3754,10 +3754,10 @@ input::-moz-focus-inner {
 }
 
 .s-hero__bg {
-    background-image: url(../images/ad.svg);
+    background-image: url(../images/hero-4.jpg);
     background-repeat: no-repeat;
-    background-position: 1rem;
-    margin-bottom: 27rem;
+    background-position: center;
+    /* margin-bottom: 27rem; */
     background-size: 100%;
     position: absolute;
     top: 0;
@@ -3785,9 +3785,10 @@ input::-moz-focus-inner {
     left: 0;
     width: 100%;
     height: 100%;
-    /* background: -webkit-gradient(linear, left top, left bottom, color-stop(10%, black), to(rgba(0, 0, 0, 0)));
-    background: linear-gradient(180deg, black 10%, rgba(0, 0, 0, 0) 100%); */
-    opacity: .35;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(10%, black), to(rgba(0, 0, 0, 0)));
+    background: linear-gradient(180deg, black 10%, rgba(0, 0, 0, 0) 100%);
+    /* background: #151515; */
+    opacity: .65;
 }
 
 
@@ -4803,6 +4804,12 @@ html.no-csstransitions .s-hero__content {
     position: relative;
 }
 
+.s-clients-2 {
+    background-color: var(--color-bg);
+    padding-top: var(--vspace-3);
+    padding-bottom: var(--vspace-4);
+    position: relative;
+}
 
 /* ------------------------------------------------------------------- 
  * ## clients slider
